tests/ui/endpoint/too_few_args.stderr
error: Too few arguments for this endpoint handler
 --> tests/ui/endpoint/too_few_args.rs:9:4
  |
9 | fn read() {}
  |    ^^^^
